<resources>
    <string name="app_name">Amago</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="mobile_phone_num">Mobile Phone Number</string>
    <string name="pin_number">Secret PIN Number</string>
    <string name="hello">Welcome!</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_register">Register</string>
    <string name="fullname">Full Name</string>
    <string name="address">Address</string>
    <string name="dob">Date of Birth</string>
    <string name="registertitle">New Producer Please Register With Your Personal Info</string>
    <string name="crednotmatch">Login Details Incorrect. Please Check and Retry</string>
    <string name="sell">Sell</string>
    <string name="newharvest">New Harvest</string>
    <string name="pickharvest">What did you just harvest?</string>
    <string name="muchharvest">How much did you harvest?</string>

    <string-array name="Produce">
        <item>Potato</item>
        <item>Onion</item>
        <item>Tomato</item>
        <item>Chilli</item>
        <item>Legume</item>
        <item>Cabbage</item>
        <item>Carrot</item>
        <item>Apple</item>
        <item>Banana</item>
        <item>Cauliflower</item>
        <item>Corn</item>
        <item>Grape</item>
        <item>Lemon</item>
        <item>Watermelon</item>
        <item>Mushroom</item>
        <item>Peanut</item>
        <item>Orange</item>
        <item>Papaya</item>
        <item>Peas</item>
        <item>Pineapple</item>
        <item>Pomegranate</item>
        <item>Garlic</item>
    </string-array>

    <string-array name="Genders">
        <item>-লিঙ্গ-</item>
        <item>পুরুষ</item>
        <item>মহিলা</item>
        <item>ট্রান্স</item>
        <item>অন্যান্য</item>
        <item>একটিও নয়</item>
    </string-array>

    <string name="alright">OK</string>
    <string name="whatlang">Pick Language</string>
    <string name="lastsale">Last Sale:</string>
    <string name="lastharvest">Prev Harvest</string>
    <string name="lastsaletext">Potato 80kg @ 25bdt/kg</string>
    <string name="lastharvesttext">Potato 500kg Onions 100kg</string>
    <string name="rahimmia">Rahim Khondokor</string>
    <string name="deliverydestination">Delivering to Shwapno</string>
    <string name="cancel">Cancel</string>
    <string name="costharvest">How much will you sell it at?</string>
    <string name="needphnum">Please enter 11 digit phone number</string>
    <string name="needname">Please enter your name</string>
    <string name="needpin">Please enter your 11 digit secret PIN</string>
    <string name="itemwaiting">Item waiting to be sold</string>
    <string name="buyer">Buyer</string>
    <string name="fresh">Fresh!</string>
    <string name="reload">Reload</string>
    <string name="willcontact">The Retailer will contact you shortly</string>
    <string name="newharvestok">New Harvest Successful</string>
    <string name="newsellok">New Sell Successful</string>
    <string name="delivering">Sending:</string>
    <string name="deliveredto">Sent to:</string>
    <string name="emptypleaseharvest">Seems like your harvest is empty, create a new harvest by tapping the green button above!</string>
    <string name="whatsell">Which harvest will you sell?</string>
    <string name="harvestupdated">Harvest List Updated</string>
    <string name="cantbeempty">The field cannot be empty. Please enter the required info</string>
</resources>
