<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="196dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="Amago Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="312dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="15"
        android:hint="@string/mobile_phone_num"
        android:inputType="phone"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText_PIN"
        android:layout_width="312dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/pin_number"
        android:textSize="25dp"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="156dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:onClick="GotoMain"
        android:text="@string/title_activity_login"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_PIN"
        app:layout_constraintTop_toBottomOf="@+id/editText_PIN" />

    <Button
        android:id="@+id/button_signup"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="GotoRegister"
        android:text="@string/signup"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/editText_PIN"
        app:layout_constraintTop_toBottomOf="@+id/editText_PIN" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textSize="40dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>