<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="@dimen/fab_margin"
                app:contentPadding="@dimen/fab_margin">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_username"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/rahimmia"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

                    <TextView
                        android:id="@+id/textView_welcome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/hello"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/rahimia" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="118dp"
                app:cardCornerRadius="@dimen/fab_margin"
                app:contentPadding="@dimen/fab_margin"
                tools:layout_editor_absoluteX="77dp"
                tools:layout_editor_absoluteY="150dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_lastsale"
                        android:layout_width="114dp"
                        android:layout_height="0dp"
                        android:text="@string/lastsale"
                        android:textAlignment="viewStart"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lastsaleitem"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/lastsaletext"
                        android:textAlignment="textEnd"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView_lastsale"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/fab_margin">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_sell"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_button"
                        android:onClick="RemoveItem"
                        android:text="@string/sell"
                        android:textSize="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_sell2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_sell3" />

                    <Button
                        android:id="@+id/button_sell3"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_button"
                        android:backgroundTint="@android:color/holo_blue_dark"
                        android:onClick="SaveItems"
                        android:text="RELOAD HARVESTS"
                        android:textSize="25dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/button_sell2"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="212dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_button_green"
                        android:onClick="GotoHarvest"
                        android:text="@string/newharvest"
                        android:textSize="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="109dp"
                app:cardCornerRadius="@dimen/fab_margin">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="127dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/im4" />

                    <TextView
                        android:id="@+id/textView_currharvitem2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/deliverydestination"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>